--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -52,4 +52,10 @@
         <!--Your custom type style here-->
     </style>
 
+    <style name="TextAppearance.MyTheme.LabelButton" parent="TextAppearance.MyTheme.Caption">
+        <item name="android:textColor">@color/label_button_color_selector</item>
+        <item name="android:textSize">14sp</item>
+
+    </style>
+
 </resources>
