--- a/app/src/main/res/layout/empty_layout.xml
+++ b/app/src/main/res/layout/empty_layout.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textAppearance="?textAppearanceSubtitle1"
             tools:text="Ошибка"
             />
 
@@ -26,16 +27,14 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             tools:text="Не удалось загрузить данные"
+            android:textAppearance="?textAppearanceBody1"
             />
 
     <Button
             android:id="@+id/btnRetry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvEmptyDescription"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:text="@string/retry"
             />
 
