--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,12 @@
         android:animateLayoutChanges="true"
         >
 
+    <LinearLayout
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_width="0px"
+            android:layout_height="0px"/>
+
     <ru.luckycactus.steamroulette.presentation.widget.LuxuryProgressBar
             android:id="@+id/progress"
             style="@style/Widget.LuxuryProgressBar"
@@ -75,7 +81,8 @@
         <TextView
                 android:id="@+id/tvSteamIdHelp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
+                android:gravity="center"
                 android:text="@string/login_screen_help"
                 android:textAppearance="@style/TextAppearance.MyTheme.LabelButton"
                 app:layout_constraintBottom_toBottomOf="parent"
