--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,10 +8,11 @@
         >
 
     <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="0px"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:layout_width="0px"
-            android:layout_height="0px"/>
+            />
 
     <ru.luckycactus.steamroulette.presentation.widget.LuxuryProgressBar
             android:id="@+id/progress"
@@ -52,8 +53,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAppName"
-                app:layout_constraintVertical_chainStyle="packed"
                 app:layout_constraintVertical_bias="0.5"
+                app:layout_constraintVertical_chainStyle="packed"
                 >
 
             <com.google.android.material.textfield.TextInputEditText
@@ -71,7 +72,7 @@
                 android:id="@+id/btnOk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ok"
+                android:text="@android:string/ok"
                 app:layout_constraintBottom_toTopOf="@id/tvSteamIdHelp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -81,8 +82,10 @@
         <TextView
                 android:id="@+id/tvSteamIdHelp"
                 android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
+                android:includeFontPadding="false"
+                android:minHeight="36dp"
                 android:text="@string/login_screen_help"
                 android:textAppearance="@style/TextAppearance.MyTheme.LabelButton"
                 app:layout_constraintBottom_toBottomOf="parent"
