--- a/app/src/main/res/values/untranslatable_strings.xml
+++ b/app/src/main/res/values/untranslatable_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Steam Roulette</string>
+    <string name="app_name" translatable="false">Shuffle My Steam</string>
     <string name="steamid_help" translatable="false">"\u2022 gabelogannewell
 \u2022 76561197960287930
 \u2022 STEAM_0:0:11101
