--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -102,10 +102,13 @@
     <com.google.android.material.button.MaterialButton
             android:id="@+id/btnExit"
             style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:gravity="start|center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/selectable_item_background"
             android:text="@string/exit"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             />
 
 </LinearLayout>
