--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -9,7 +9,8 @@
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/cover_placeholder">
+            android:background="@drawable/cover_placeholder"
+            >
 
         <TextView
                 android:id="@+id/tvName"
