--- a/app/src/main/res/layout/fragment_options_filter.xml
+++ b/app/src/main/res/layout/fragment_options_filter.xml
@@ -4,30 +4,27 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         >
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/default_activity_margin"
+            android:paddingTop="8dp"
             android:paddingBottom="8dp"
             >
 
-        <TextView
-                android:layout_width="wrap_content"
+        <ru.luckycactus.steamroulette.presentation.widget.PreferenceView
+                android:id="@+id/prefViewMaxPlaytime"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/default_activity_margin"
                 android:paddingRight="@dimen/default_activity_margin"
                 android:paddingBottom="8dp"
-                android:text="@string/roulette_game_time_filter_title"
-                android:textAppearance="?textAppearanceSubtitle2"
-                />
-
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvGameTimeFilter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:background="?selectableItemBackground"
+                app:prefTitle="@string/playtime"
                 android:layout_marginBottom="8dp"
                 />
 
@@ -49,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/hidden_games_count"
-                    android:textAppearance="?textAppearanceSubtitle2"
+                    android:textAppearance="?textAppearanceSubtitle1"
                     />
 
             <TextView
