game screen started

--- a/app/src/main/res/layout/fragment_main_flow.xml
+++ b/app/src/main/res/layout/fragment_main_flow.xml
@@ -14,7 +14,7 @@
             android:layout_marginBottom="?attr/actionBarSize"
             />
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -59,6 +59,6 @@
 
         </LinearLayout>
 
-    </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
 </FrameLayout>
