--- a/app/src/main/res/layout/item_game_details_header.xml
+++ b/app/src/main/res/layout/item_game_details_header.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="@dimen/default_activity_margin"
         >
 
     <ru.luckycactus.steamroulette.presentation.ui.widget.GameView
@@ -15,7 +16,7 @@
             app:layout_constraintDimensionRatio="2:3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintWidth_percent="0.33"
             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
