--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -7,18 +7,26 @@
         android:orientation="vertical"
         >
 
-    <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            app:navigationIcon="?homeAsUpIndicator"
-            />
-
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvGameDetails"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
 
+    <!--    <com.google.android.material.bottomappbar.BottomAppBar-->
+    <!--            android:id="@+id/toolbar"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="?actionBarSize"-->
+    <!--            android:layout_gravity="bottom"-->
+    <!--            />-->
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@drawable/ic_reply_black_24dp"
+            />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
