--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -8,11 +8,38 @@
         >
 
     <TextView
+            style="@style/Widget.MyTheme.GameDetailsHeadlineTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/default_activity_margin"
+            android:paddingRight="@dimen/default_activity_margin"
+            android:text="@string/game_details_description"
+            />
+
+    <TextView
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/default_activity_margin"
+            android:paddingRight="@dimen/default_activity_margin"
             android:textAppearance="?textAppearanceBody1"
-            tools:text="abracadabra"
+            />
+
+    <Space
+            android:layout_width="0dp"
+            android:layout_height="8dp"
+            />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvGenres"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvCategories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             />
 
 </LinearLayout>
