--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="standard_progress_bar_size">48dp</dimen>
     <dimen name="cardview_corner_radius">8dp</dimen>
     <dimen name="dialog_corner_radius">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
