--- a/app/src/main/res/layout/item_game_details_links.xml
+++ b/app/src/main/res/layout/item_game_details_links.xml
@@ -12,21 +12,21 @@
             android:id="@+id/btnStore"
             style="?materialButtonOutlinedStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/button_steam_store"
             />
 
     <Space
             android:layout_width="@dimen/default_activity_margin"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             />
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/btnHub"
             style="?materialButtonOutlinedStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/button_community_hub"
             />
