--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -33,5 +33,7 @@
             android:id="@+id/ivGame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/round_outline"
+            android:outlineProvider="background"
             />
 </merge>
