--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -23,43 +23,44 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="16dp"
                 android:clipChildren="false"
-                app:layout_constraintBottom_toTopOf="@id/fabSteamInfo"
+                android:transitionGroup="true"
+                app:layout_constraintBottom_toTopOf="@id/fabGameInfo"
                 app:layout_constraintDimensionRatio="2:3"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:transitionGroup="true"
-                />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabSteamInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/fabHideGame"
-                app:srcCompat="@drawable/ic_steam"
                 />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fabHideGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/fabGameInfo"
+                app:srcCompat="@drawable/ic_visibility_off_white_24dp"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabGameInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/fabHideGame"
+                app:layout_constraintRight_toLeftOf="@id/fabNextGame"
+                app:srcCompat="@drawable/ic_info_black_24dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/fabSteamInfo"
-                app:layout_constraintRight_toLeftOf="@id/fabNextGame"
-                app:srcCompat="@drawable/ic_visibility_off_white_24dp"
                 />
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fabNextGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/fabHideGame"
+                app:layout_constraintLeft_toRightOf="@id/fabGameInfo"
                 app:layout_constraintRight_toRightOf="parent"
                 app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
                 />
