--- a/app/src/main/res/layout/item_game_card_stack.xml
+++ b/app/src/main/res/layout/item_game_card_stack.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="0dp"
+            app:textSize="36sp"
             />
 
     <ImageView
@@ -23,6 +24,7 @@
             android:alpha="0"
             android:elevation="2dp"
             android:rotation="20"
+            android:tint="@color/color_overlay_hide"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintHorizontal_bias="0.9"
@@ -32,7 +34,6 @@
             app:layout_constraintVertical_bias="0.05"
             app:layout_constraintWidth_percent="0.25"
             app:srcCompat="@drawable/ic_visibility_off_white_24dp"
-            android:tint="@color/color_overlay_hide"
             tools:alpha="1"
             />
 
@@ -44,6 +45,7 @@
             android:alpha="0"
             android:elevation="1dp"
             android:rotation="-20"
+            android:tint="@color/color_overlay_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintHorizontal_bias="0.1"
@@ -53,7 +55,6 @@
             app:layout_constraintVertical_bias="0.05"
             app:layout_constraintWidth_percent="0.25"
             app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
-            android:tint="@color/color_overlay_next"
             tools:alpha="1"
             />
 
