--- a/app/src/main/res/layout/item_game_details_header.xml
+++ b/app/src/main/res/layout/item_game_details_header.xml
@@ -18,6 +18,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.33"
+            app:textSize="16sp"
             />
 
     <TextView
