--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,4 +18,8 @@
         <attr name="prefTitle" format="string" />
         <attr name="prefValue" format="string" />
     </declare-styleable>
+
+    <declare-styleable name="GameView">
+        <attr name="textSize" format="dimension" />
+    </declare-styleable>
 </resources>
