--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -15,6 +15,7 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             android:padding="@dimen/default_activity_margin"
+            android:splitMotionEvents="false"
             >
 
         <androidx.recyclerview.widget.RecyclerView
