--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -1,75 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:clipChildren="false"
+        android:orientation="vertical"
         >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/content"
+    <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:clipChildren="false"
-            android:clipToPadding="false"
-            android:padding="@dimen/default_activity_margin"
-            android:splitMotionEvents="false"
             >
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvRoulette"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="16dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:clipChildren="false"
-                android:transitionGroup="true"
-                app:layout_constraintBottom_toTopOf="@id/fabGameInfo"
-                app:layout_constraintDimensionRatio="2:3"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                android:clipToPadding="false"
+                android:padding="@dimen/default_activity_margin"
+                android:splitMotionEvents="false"
+                >
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabHideGame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/fabGameInfo"
-                app:srcCompat="@drawable/ic_visibility_off_white_24dp"
-                />
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvRoulette"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="16dp"
+                    android:clipChildren="false"
+                    android:transitionGroup="true"
+                    app:layout_constraintBottom_toTopOf="@id/fabGameInfo"
+                    app:layout_constraintDimensionRatio="2:3"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabGameInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/fabHideGame"
-                app:layout_constraintRight_toLeftOf="@id/fabNextGame"
-                app:srcCompat="@drawable/ic_info_black_24dp"
-                />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabHideGame"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/fabGameInfo"
+                    app:srcCompat="@drawable/ic_visibility_off_white_24dp"
+                    />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabGameInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/fabHideGame"
+                    app:layout_constraintRight_toLeftOf="@id/fabNextGame"
+                    app:srcCompat="@drawable/ic_info_black_24dp"
+                    />
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabNextGame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/fabGameInfo"
-                app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
-                />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabNextGame"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/fabGameInfo"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
+                    />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/empty_layout" />
+        <include layout="@layout/empty_layout" />
 
-    <include layout="@layout/fullscreen_progress" />
+        <include layout="@layout/fullscreen_progress" />
 
-</FrameLayout>
+    </FrameLayout>
+
+    <include layout="@layout/main_toolbar" />
+
+</LinearLayout>
