--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -69,8 +69,8 @@
                 >
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="@dimen/half_default_activity_margin"
                     android:src="@drawable/metacritic_logo_no_text"
