--- a/app/src/main/res/layout/fullscreen_progress.xml
+++ b/app/src/main/res/layout/fullscreen_progress.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/progress"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:visibility="gone"
+    >
 
-    <ru.luckycactus.steamroulette.presentation.ui.widget.LuxuryProgressBar
-            style="@style/Widget.LuxuryProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
+    <include
+        android:id="@+id/_progress"
+        layout="@layout/progress"
+        />
 
 </FrameLayout>
