--- a/app/src/main/res/anim/dialog_out.xml
+++ b/app/src/main/res/anim/dialog_out.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="100"
-        >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@integer/dialog_anim_duration"
+    >
 
     <scale
-            android:fromXScale="100%"
-            android:fromYScale="100%"
-            android:pivotX="50%"
-            android:pivotY="50%"
-            android:toXScale="90%"
-            android:toYScale="90%"
-            />
+        android:fromXScale="100%"
+        android:fromYScale="100%"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="80%"
+        android:toYScale="80%"
+        />
 
     <alpha
-            android:fromAlpha="1"
-            android:toAlpha="0"
-            />
+        android:fromAlpha="1"
+        android:toAlpha="0"
+        />
 
 </set>
