--- a/app/src/main/res/color/label_button_color_selector.xml
+++ b/app/src/main/res/color/label_button_color_selector.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2017 The Android Open Source Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,6 +16,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:alpha="1.00" android:color="?attr/colorPrimaryVariant" android:state_enabled="true" android:state_pressed="true" />
-    <item android:alpha="1.00" android:color="?attr/colorPrimary" android:state_enabled="true"/>
-    <item android:alpha="0.38" android:color="?attr/colorOnSurface"/>
+    <item android:alpha="1.00" android:color="?attr/colorPrimary" android:state_enabled="true" />
+    <item android:alpha="0.38" android:color="?attr/colorOnSurface" />
 </selector>
