--- a/app/src/main/res/layout/view_game_roulette.xml
+++ b/app/src/main/res/layout/view_game_roulette.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:parentTag="androidx.cardview.widget.CardView"
-        >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="androidx.cardview.widget.CardView"
+    >
 
     <FrameLayout
-            android:id="@+id/placeholder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/cover_placeholder"
-            android:foreground="@drawable/cover_glare"
-            >
+        android:id="@+id/placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/cover_placeholder"
+        android:foreground="@drawable/cover_glare"
+        >
 
         <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:maxLines="2"
-                android:padding="8dp"
-                app:autoSizeTextType="uniform"
-                tools:text="Final Fantasy XIV: A Realm Reborn"
-                tools:textSize="20sp"
-                />
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxLines="2"
+            android:padding="@dimen/spacing_small"
+            app:autoSizeTextType="uniform"
+            tools:text="Final Fantasy XIV: A Realm Reborn"
+            tools:textSize="@dimen/game_view_roulette_text_size"
+            />
 
     </FrameLayout>
 
     <ImageView
-            android:id="@+id/ivGame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/round_outline"
-            android:outlineProvider="background"
-            />
+        android:id="@+id/ivGame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/round_outline"
+        android:outlineProvider="background"
+        />
 </merge>
