--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -55,16 +55,26 @@
     <style name="TextAppearance.MyTheme.LabelButton" parent="TextAppearance.MyTheme.Caption">
         <item name="android:textColor">@color/label_button_color_selector</item>
         <item name="android:textSize">14sp</item>
-
     </style>
 
     <style name="TextAppearance.MyTheme.GameDetailsHeadline" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextAppearance.MyTheme.GameDetailsTitle" parent="TextAppearance.MaterialComponents.Headline5"></style>
+
+    <style name="TextAppearance.MyTheme.GameDetailsPublisher" parent="TextAppearance.MaterialComponents.Subtitle1">
+        text</style>
+
     <style name="TextAppearance.MyTheme.GameDetailsDeveloper" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">sans-serif-medium</item>
         <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="TextAppearance.MyTheme.GameDetailsReleaseDate" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:alpha">?alphaEmphasisHigh</item>
+        <item name="android:textAppearance">?textAppearanceSubtitle1</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
