add metacritic click

--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -65,6 +65,7 @@
             android:id="@+id/layoutMetacriticScore"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:foreground="?selectableItemBackground"
             android:orientation="horizontal"
             >
 
