--- a/app/src/main/res/layout/item_game_details_short_description.xml
+++ b/app/src/main/res/layout/item_game_details_short_description.xml
@@ -2,18 +2,20 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/GameDetailsItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
     <TextView
-        style="@style/Widget.MyTheme.GameDetailsHeadlineTextView"
+        style="@style/Widget.MyTheme.GameDetailsHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/default_activity_margin"
         android:paddingRight="@dimen/default_activity_margin"
         android:text="@string/game_details_description"
+        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsHeadline"
         />
 
     <TextView
