--- a/app/src/main/res/layout/item_game_details_system_requirements.xml
+++ b/app/src/main/res/layout/item_game_details_system_requirements.xml
@@ -3,23 +3,46 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/GameDetailsItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?selectableItemBackground"
     android:orientation="vertical"
     android:paddingLeft="@dimen/default_activity_margin"
     android:paddingRight="@dimen/default_activity_margin"
     >
 
-    <TextView
-        style="@style/Widget.MyTheme.GameDetailsHeadlineTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        style="@style/Widget.MyTheme.GameDetailsHeadline"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/game_details_platforms"
-        />
+        android:layout_marginBottom="@dimen/default_activity_margin"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables"
+        >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/game_details_platforms"
+            android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsHeadline"
+            />
+
+        <ImageView
+            android:layout_width="@dimen/touchable_view_half_size"
+            android:layout_height="@dimen/touchable_view_half_size"
+            android:layout_marginStart="@dimen/spacing_small"
+            app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
 
         <ImageView
